fix code fg color in dark mode

--- a/main.css
+++ b/main.css
@@ -392,6 +392,7 @@ summary {
 
 .hljs {
   background: light-dark(#fbf1c7, #282828) !important;
+  color: light-dark(#282828, #fbf1c7) !important;
 }
 
 /* Gray: gray_245 / gray_245 */
